// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCardMeta renders full blog card meta 1`] = `
<div
  className="jsx-105857479 card-meta"
>
  <div
    className="jsx-105857479 authors"
  >
    <span
      className="jsx-105857479"
    >
      by
    </span>
    <span
      className="jsx-105857479 author"
    >
      test-name
    </span>
  </div>
  <div
    className="jsx-105857479 publish-data"
  >
    <span
      className="jsx-105857479 publish-date"
    >
      August 13, 2019
    </span>
    undefined minutes
  </div>
</div>
`;

exports[`BlogCardMeta renders full blog card meta with multiple authors 1`] = `
<div
  className="jsx-105857479 card-meta"
>
  <div
    className="jsx-105857479 authors"
  >
    <span
      className="jsx-105857479"
    >
      by
    </span>
    <span
      className="jsx-105857479 author"
    >
      test-name
    </span>
    <span
      className="jsx-105857479 author"
    >
      test-name-2
    </span>
  </div>
  <div
    className="jsx-105857479 publish-data"
  >
    <span
      className="jsx-105857479 publish-date"
    >
      August 13, 2019
    </span>
    undefined minutes
  </div>
</div>
`;
